--- a/SimpleCarAPI/Properties/launchSettings.json
+++ b/SimpleCarAPI/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7098;http://localhost:5098",
+      "applicationUrl": "https://localhost:7098",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
