--- a/SimpleCarAPI/SimpleCar.csproj
+++ b/SimpleCarAPI/SimpleCar.csproj
@@ -7,10 +7,11 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="7.2.0" />
+        <PackageReference Include="Autofac.Extras.CommonServiceLocator" Version="6.0.1" />
         <PackageReference Include="ExcelDataReader" Version="3.6.0" />
         <PackageReference Include="ExcelDataReader.DataSet" Version="3.6.0" />
         <PackageReference Include="ExcelDataReader.Mapping" Version="2.2.2" />
-        <PackageReference Include="FastExcel" Version="3.0.13" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     </ItemGroup>
 
