--- a/SimpleCarAPI/SimpleCar.csproj
+++ b/SimpleCarAPI/SimpleCar.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
         <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="7.2.0" />
         <PackageReference Include="Autofac.Extras.CommonServiceLocator" Version="6.0.1" />
+        <PackageReference Include="BenchmarkDotNet" Version="0.13.1" />
         <PackageReference Include="ExcelDataReader" Version="3.6.0" />
         <PackageReference Include="ExcelDataReader.DataSet" Version="3.6.0" />
         <PackageReference Include="ExcelDataReader.Mapping" Version="2.2.2" />
