--- a/SimpleCarAPI/SimpleCar.csproj
+++ b/SimpleCarAPI/SimpleCar.csproj
@@ -28,7 +28,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="BenchmarkDotNet.Artifacts\results" />
+      <Folder Include="BenchmarkDotNet.Artifacts\" />
     </ItemGroup>
 
 </Project>
