--- a/Libs/CurrencyExchangeLib/CurrencyExchangeLib.csproj
+++ b/Libs/CurrencyExchangeLib/CurrencyExchangeLib.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Serilog.Extensions.Hosting" Version="4.2.0" />
+    </ItemGroup>
+
 </Project>
