--- a/SimpleCarAPI/SimpleCar.csproj
+++ b/SimpleCarAPI/SimpleCar.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
@@ -8,11 +8,11 @@
 
     <ItemGroup>
         <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="7.2.0" />
-        <PackageReference Include="Autofac.Extras.CommonServiceLocator" Version="6.0.1" />
         <PackageReference Include="BenchmarkDotNet" Version="0.13.1" />
         <PackageReference Include="ExcelDataReader" Version="3.6.0" />
         <PackageReference Include="ExcelDataReader.DataSet" Version="3.6.0" />
         <PackageReference Include="ExcelDataReader.Mapping" Version="2.2.2" />
+        <PackageReference Include="Serilog.Sinks.Console" Version="4.0.1" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     </ItemGroup>
 
@@ -25,6 +25,10 @@
       <None Update="source-data.xlsx">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Controllers\" />
     </ItemGroup>
 
 </Project>
